NET MAUI 8.0.0 SDK Release (#89)
* .NET BS 8.0: Image ref fixes

* .NET BS: Update android example project to 8.0

* MAUI BS 8.0: Updated namespaces

* .NET BS 7.1.1: Updated package version and libraries.txt

* .NET BS 7.1.1: Updated package version and libraries.txt

* NET BS 7.1.1: Updated ScanbotBarcodeSDK.NET to the release version

* MAUI BS 8.0:
- Fixed the breaking changes wrt new API updates.

* MAUI BS 8.0: API Updates

* NET BS 8.0:
- Updated the NET iOS and Droid application to the latest releases
- iOS: Added new ImagePicker implementation

* MAUI BS 8.0:
- Fixed the breaking changes WRT new ResultWrapper changes

* NET BS 8.0:
- Fixed the namespaces for an optional snippet

* MAUI BS 8.0: Package Update

* MAUI BS 8.0:
- Fixed Breaking API changes from the SDK.

* NET BS 8.0:
- Updated the NET package

* MAUI BS 8.0:
- Updated to latest local package

* NET BS 8.0: Package Update

* NET BS 8.0:
- Updated the Packages
- Droid: Fixed the ScanAndCount Image Icon issue
- Droid: Updated the Android Target version

* MAUI BS 8.0:
- Added 2 new options in the Feature list and related supportive functions
- Added DocumentPicker

* MAUI BS 8.0:
- Updated to RC Package.
- Updated Libraries

* NET BS 8.0:
- Updated to the RC Package.
- Updated Libraries.txt

* MAUI BS 8.0:
- Updated the BindingContext for MVVM EventHandler to Command converter code.

* NET BS 8.0:
- Updated the breaking change in the release package.

* MAUI BS 8.0:
- Added ImagePicker Utils class with 2 different ways of picking image. Path and Source
- Added few more options for the SDK in the feature list

* MAUI BS 8.0:
- Updated to the latest RC package
- Updated the Namespace for SdkConfiguration and ImageRef classes.

* NET BS 8.0:
- Updated the latest RC packages.
- iOS: Updated the ImagePicker to return ImagePath.

* MAUI BS 8.0: Package Update

* MAUI BS 8.0:
- Fixed the warnings and updated the deprecated code to the recommended.
- Updated ListView to CollectionView, using Xaml instead

--- a/BarcodeSDK.MAUI.Example/Results/BarcodeResultPage.xaml
+++ b/BarcodeSDK.MAUI.Example/Results/BarcodeResultPage.xaml
@@ -3,7 +3,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:converter="clr-namespace:ScanbotSDK.MAUI.Example.Utils.XamlValueConverters"
-             xmlns:models="clr-namespace:ScanbotSDK.MAUI.Barcode.Core;assembly=ScanbotSDK.Shared"
+             xmlns:models="clr-namespace:ScanbotSDK.MAUI.Core.Barcode;assembly=ScanbotSDK.Shared"
              x:Class="ScanbotSDK.MAUI.Example.Results.BarcodeResultPage"
              Title="Barcode Results">
     <ContentPage.Resources>
@@ -11,67 +11,75 @@
     </ContentPage.Resources>
     <StackLayout
         BackgroundColor="White">
-        <ListView x:Name="ListViewResults"
-                  HasUnevenRows="True"
-                  ItemSelected="OnItemSelected">
-            <ListView.ItemTemplate>
+        <CollectionView x:Name="ListViewResults"
+                        SelectionMode="Single">
+            <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="models:BarcodeItem">
-                    <ViewCell>
-                        <Grid ColumnDefinitions="Auto,*,50">
-                            <Image
-                                Grid.Column="0"
-                                HorizontalOptions="Fill"
-                                VerticalOptions="Fill"
-                                Aspect="AspectFit"
-                                WidthRequest="90"
-                                Source="{Binding SourceImage, Converter={StaticResource ConvertImageRefToSource}}">
-                                <Image.Triggers>
-                                    <DataTrigger TargetType="Image"
-                                                 Binding="{Binding SourceImage, TargetNullValue=''}"
-                                                 Value="">
-                                        <Setter Property="IsVisible"
-                                                Value="False"/>
-                                    </DataTrigger>
-                                </Image.Triggers>
-                            </Image>
-                            <VerticalStackLayout
-                                Grid.Column="1"
-                                Margin="5">
-                                <Label Margin="0,5,0,0"
-                                       Text="Format:"
-                                       FontAttributes="Bold"
-                                       FontSize="16"
-                                       TextColor="Black" />
-                                <Label
-                                    Text="{Binding Format}"
-                                    VerticalOptions="Start"
-                                    HorizontalOptions="Start"
-                                    FontAttributes="Bold"
-                                    FontSize="14"
-                                    TextColor="Black" />
-                                <Label
-                                    Margin="0,9,0,0"
-                                    Text="Text: "
-                                    FontAttributes="Bold"
-                                    FontSize="16"
-                                    TextColor="Black" />
-                                <Label Text="{Binding Text}"
-                                       FontSize="14"
-                                       MaxLines="3"
-                                       TextColor="Black" />
-                            </VerticalStackLayout>
-                            <Grid Grid.Column="2">
-                                <Label Text=">"
-                                       FontSize="20"
-                                       FontAttributes="Bold"
-                                       TextColor="Black"
-                                       VerticalOptions="Center"
-                                       HorizontalOptions="Center" />
-                            </Grid>
+                    <Grid ColumnDefinitions="Auto,*,50">
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="ResultItemTapped" CommandParameter="{Binding .}" />
+                        </Grid.GestureRecognizers>
+                        <Image
+                            Grid.Column="0"
+                            HorizontalOptions="Fill"
+                            VerticalOptions="Fill"
+                            Aspect="AspectFit"
+                            WidthRequest="90"
+                            Source="{Binding SourceImage, Converter={StaticResource ConvertImageRefToSource}}">
+                            <Image.Triggers>
+                                <DataTrigger TargetType="Image"
+                                             Binding="{Binding SourceImage, TargetNullValue=''}"
+                                             Value="">
+                                    <Setter Property="IsVisible"
+                                            Value="False" />
+                                </DataTrigger>
+                            </Image.Triggers>
+                        </Image>
+                        <VerticalStackLayout
+                            Grid.Column="1"
+                            Margin="5">
+                            <Label Margin="0,5,0,0"
+                                   Text="Format:"
+                                   FontAttributes="Bold"
+                                   FontSize="16"
+                                   TextColor="Black" />
+                            <Label
+                                Text="{Binding Format}"
+                                VerticalOptions="Start"
+                                HorizontalOptions="Start"
+                                FontAttributes="Bold"
+                                FontSize="14"
+                                TextColor="Black" />
+                            <Label
+                                Margin="0,9,0,0"
+                                Text="Text: "
+                                FontAttributes="Bold"
+                                FontSize="16"
+                                TextColor="Black" />
+                            <Label Text="{Binding Text}"
+                                   FontSize="14"
+                                   MaxLines="3"
+                                   TextColor="Black" />
+                        </VerticalStackLayout>
+                        <Grid Grid.Column="2">
+                            <Path
+                                Stroke="Gray"
+                                StrokeThickness="2"
+                                Data="M 0 0 L 8 8 L 0 16" 
+                                VerticalOptions="Center"
+                                HorizontalOptions="Center" />
                         </Grid>
-                    </ViewCell>
+                        <BoxView 
+                            Grid.Column="0"
+                            Grid.ColumnSpan="3"
+                            BackgroundColor="LightGray"
+                            Margin="5,0"
+                            VerticalOptions="End"
+                            HeightRequest="1"
+                            HorizontalOptions="Fill" />
+                    </Grid>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </StackLayout>
 </ContentPage>
