--- a/BarcodeSDK.MAUI.Example/BarcodeTypesSelectionPage.xaml
+++ b/BarcodeSDK.MAUI.Example/BarcodeTypesSelectionPage.xaml
@@ -2,12 +2,37 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:example="clr-namespace:ScanbotSDK.MAUI.Example"
+             xmlns:generic="clr-namespace:System.Collections.Generic;assembly=System.Runtime"
+             xmlns:barcode="clr-namespace:ScanbotSDK.MAUI.Core.Barcode;assembly=ScanbotSDK.Shared"
              x:Class="ScanbotSDK.MAUI.Example.BarcodeTypesSelectionPage"
              Title="Accepted Barcodes">
-    <ListView
+    <CollectionView
         x:Name="TypesList"
-        BackgroundColor="White"
-        RowHeight="50"
-        ItemTemplate="{DataTemplate example:BarcodeFormatCell}"/>
+        BackgroundColor="White">
+        <CollectionView.ItemTemplate>
+            <DataTemplate x:DataType="generic:KeyValuePair(barcode:BarcodeFormat, x:Boolean)">
+                <VerticalStackLayout
+                    BackgroundColor="LightGray"
+                    Padding="0,0,0,1"
+                    Margin="5,0">
+                    <Grid
+                        HorizontalOptions="Fill"
+                        ColumnDefinitions="8*,2*"
+                        Padding="15,5"
+                        BackgroundColor="White">
+                        <Label
+                            Grid.Column="0"
+                            Text="{Binding Key}"
+                            VerticalOptions="Center"
+                            TextColor="Black" />
+                        <Switch
+                            Grid.Column="1"
+                            IsToggled="{Binding Value}"
+                            Toggled="Switch_OnToggled"
+                            HorizontalOptions="End" />
+                    </Grid>
+                </VerticalStackLayout>
+            </DataTemplate>
+        </CollectionView.ItemTemplate>
+    </CollectionView>
 </ContentPage>
